deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointments-deployment
  namespace: egs-doctalk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointments
  template:
    metadata:
      labels:
        app: appointments
    spec:
      containers:
      - name: appointments
        image: registry.deti:5000/egs-doctalk/appointment_service:v1
        ports:
        - containerPort: 5186
      - name: appointments-db
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: egs-doctalk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: registry.deti:5000/egs-doctalk/backend_service:latest
        ports:
        - containerPort: 5285
      - name: backend-db
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-deployment
  namespace: egs-doctalk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-api
  template:
    metadata:
      labels:
        app: authentication-api
    spec:
      containers:
        - name: authentication-svc
          image: registry.deti:5000/egs-doctalk/egs-authentication-svc:v1
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
  namespace: egs-doctalk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-api
  template:
    metadata:
      labels:
        app: notification-api
    spec:
      containers:
      - name: notification-api
        image: registry.deti:5000/egs-doctalk/egs-notification-svc:v1
        ports:
        - containerPort: 3030
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webrtc-deployment
  namespace: egs-doctalk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webrtc
  template:
    metadata:
      labels:
        app: webrtc
    spec:
      containers:
      - name: webrtc
        image: registry.deti:5000/egs-doctalk/webrtc:v1
        ports:
        - containerPort: 3300
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peerjs-deployment
  namespace: egs-doctalk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peerjs
  template:
    metadata:
      labels:
        app: peerjs
    spec:
      containers:
      - name: peerjs
        image: registry.deti:5000/egs-doctalk/peerjs:v1
        ports:
        - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: egs-doctalk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: registry.deti:5000/egs-doctalk/frontend:v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: appointments-service
  namespace: egs-doctalk
spec:
  ports:
  - port: 80
    targetPort: 5186
  selector:
    app: appointments
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: egs-doctalk
spec:
  ports:
  - port: 80
    targetPort: 5285
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-svc
  namespace: egs-doctalk
spec:
  selector:
    app: authentication-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: notification-svc
  namespace: egs-doctalk
spec:
  selector:
    app: notification-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: webrtc-service
  namespace: egs-doctalk
spec:
  ports:
  - port: 80
    targetPort: 3300
  selector:
    app: webrtc
---
apiVersion: v1
kind: Service
metadata:
  name: peerjs-service
  namespace: egs-doctalk
spec:
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: peerjs
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: egs-doctalk
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egs-doctalk-ingress-k3s
  namespace: egs-doctalk
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: app-egs-doctalk-backend.deti
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port: 
              number: 80
  - host: app-egs-doctalk-auth.deti
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentication-svc
            port: 
              number: 80
  - host: app-egs-doctalk-peerjs.deti
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: peerjs-service
            port: 
              number: 80
  - host: app-egs-doctalk-frontend.deti
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
